<resources>
    <string name="app_name">BluePay</string>
    <string name="connect">Connect</string>
    <string name="openConnection">Open Connection</string>
    <string name="title_activity_splash">splash</string>
    <string name="Refresh">refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="makeTrans">Make Transaction</string>
    <string name="home_text">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About Us</string>
    <string name="disconnect">Disconnect</string>
    <string name="connectionLabel">Sender</string>
    <string name="openConnectionLabel">Receiver</string>
    <string name="aboutStart">This is the Final Year Project of Students of Telecommunications Engineering, NED University, developed by: </string>
    <string name="names">  Abiha Wasif \nFizza Shahid \nMahrukh Siddiqui \nSidra Shakeel </string>
    <string name="aboutEnd">Our aim is to enable secure and reliable transfer of money through Bluetooth.</string>
    <string name="login">LOGIN</string>
    <string name="account_label">Account ID</string>
    <string name="password_label">Password</string>
    <string name="account_hint">Enter Account ID here...</string>
    <string name="password_hint">Enter password here...</string>
    <string name="transaction_message">Do you wish to pay this amount?</string>
    <string name="accept">ACCEPT</string>
    <string name="cancel">CANCEL</string>
    <string name="accountInfo">Account Info</string>
    <string name="getAccountInfo">Get Details</string>
    <string name="amount">Amount</string>
    <string name="transactionToday">Transactions Made Today</string>
</resources>
