<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#404040"
    android:id="@+id/loginFrag"
    tools:context="com.example.adilsaleem.bluepay.com.example.adilsaleem.bluepay.Home">


        <ImageView
            android:id="@+id/logo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:layout_weight="1"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_label"
        android:textColor="@android:color/white"
        android:textSize="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/account_hint"
        android:padding="8dp"
        android:id="@+id/account_id"
        android:background="@drawable/text_shape"
        android:layout_margin="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textColor="@android:color/white"
        android:textSize="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:fontFamily=""
        android:id="@+id/password"
        android:hint="@string/password_hint"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:background="@drawable/text_shape"/>
    <Button
        android:id="@+id/log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/button_shape"
        android:paddingRight="32dp"
        android:paddingLeft="32dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="0"/>

</LinearLayout>
