<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bluetoothFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="#404040"
    tools:context="com.example.adilsaleem.bluepay.com.example.adilsaleem.bluepay.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectionLabel"
        android:textColor="@android:color/white"
        android:textSize="18dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refresh"
            android:textColor="@android:color/white"
            android:background="@drawable/button_shape"
            android:text="@string/Refresh"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:background="@android:color/white"
        android:hint="Enter Amount here..."
        android:text=""
        android:layout_weight="0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connect"
            android:textColor="@android:color/white"
            android:background="@drawable/button_shape_2"
            android:text="@string/connect"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openConnectionLabel"
        android:textColor="@android:color/white"
        android:textSize="18dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/openConnection"
        android:textColor="@android:color/white"
        android:background="@drawable/button_shape_2"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/openConnection"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountInfo"
        android:textColor="@android:color/white"
        android:textSize="18dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountInfo"
        android:textColor="@android:color/white"
        android:background="@drawable/button_shape_2"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/getAccountInfo"/>

</LinearLayout>